# AreaOfInterest

./: CMakeLists.txt  README.md  vcpkg.json
src/Client/: ClientMessageHandler.cpp  ClientMessageHandler.h  Game.cpp  Network.cpp  Network.h  SDL2Utils.cpp  SDL2Utils.h  World.cpp  World.h
src/Common/Game/: Entity.cpp  Entity.h
src/Common/Protocol/: Message.h  Protocol.cpp  Protocol.h
src/Common/Utils/: Time.cpp  Time.h
src/Server/: AOI.cpp  AOI.h  Game.cpp  Network.cpp  Network.h  ServerMessageHandler.cpp  ServerMessageHandler.h  Session.cpp  Session.h  World.cpp  World.h
